# mod-manager

./: Cargo.toml  Makefile  Readme.md  complete.example.toml  complete.toml.example  config.example.toml  meson.build  minimal.toml.example  mod-manager  mod-manager-overlayfs-helper
src/: command.vala  config.rs  external_command.rs  game.rs  game.vala  main.rs  meson.build  mod-manager.vala  mod.vala  mod_set.rs  overlay.rs  utils.vala
test/: test.toml
vapi/: libtoml.vapi
